--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,16 @@
- - uses: actions/checkout@v2
+name: Docker Image CI
+
+on:
+  
+
+  workflow_call:
+
+jobs:
+  Checkout_job:
+    runs-on: 
+      - self-hosted
+      - label-1
+     
+    steps:
+    - name: Git Checkout
+      uses: actions/checkout@v2
