--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,6 @@
-runs-on: self-hosted
-steps:
- - uses: actions/checkout@v2
+on:
+  workflow_call:
+    runs-on: self-hosted
+    steps:
+    - name: Git Checkout
+      uses: actions/checkout@v2
