--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
+name: Reuseable
 on:
-  workflow_call:
-    runs-on: self-hosted
+  workflow_call
 jobs:
-  steps:
-  - name: Git Checkout
-    uses: actions/checkout@v2
+  Git-Checkouts:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Git Checkout
+      uses: actions/checkout@v2
