--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: docker.io
-        username: ${{ secrets.DOCKER_USER}}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.username}}
+        password: ${{ secrets.username }}
     - name: Build and push
       uses: docker/build-push-action@v4
       with:
