--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       with:
         registry: docker.io
         username: ${{ secrets.username}}
-        password: ${{ secrets.username }}
+        password: ${{ secrets.password }}
     - name: Build and push
       uses: docker/build-push-action@v4
       with:
